[PE] Fix border-radius with overflow-clip without visual overflow

We still omit OverflowClip when there is no visual overflow, but we
need to apply the inner border radius clip when clipping a box.

Bug: 842463
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I19937a58b99cc91f70591041782cf9dc26f1a55b
Reviewed-on: https://chromium-review.googlesource.com/1057838
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558529}
Former-commit-id: e2cfcd78b0b762eea5eaffec65ed2f217e179403