third_party/blink/renderer/core/paint/box_clipper_base.cc
@@ -24,11 +24,17 @@ void BoxClipperBase::InitializeScopedClipProperty(
   if (!fragment)
     return;
   const auto* properties = fragment->PaintProperties();
-  if (!properties || !properties->OverflowClip())
+  if (!properties)
     return;
 
-  scoped_clip_property_.emplace(paint_info.context.GetPaintController(),
-                                properties->OverflowClip(), client,
+  const auto* clip = properties->OverflowClip()
+                         ? properties->OverflowClip()
+                         : properties->InnerBorderRadiusClip();
+  if (!clip)
+    return;
+
+  scoped_clip_property_.emplace(paint_info.context.GetPaintController(), clip,
+                                client,
                                 paint_info.DisplayItemTypeForClipping());
 }
 
